# v2-RHC-bot

./: Cargo.toml
.github/workflows/: release.yml
packaging/: rhc-bot.service  rhc-bot.spec
src/: main.rs
